--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">TwoFactorAuth</string>
+    <string name="no_services_added">No services added</string>
+    <string name="add_new_2fa_service">Add new 2FA service</string>
 </resources>
