--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,8 @@
     <string name="no_services_added">No services added</string>
     <string name="add_new_2fa_service">Add new 2FA service</string>
     <string name="create">Create</string>
+    <string name="save">Save</string>
+    <string name="delete">Delete</string>
+    <string name="delete_service_confirmation">Are you sure you want to delete this service?</string>
+    <string name="cancel">Cancel\n</string>
 </resources>
