--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,5 +6,5 @@
     <string name="save">Save</string>
     <string name="delete">Delete</string>
     <string name="delete_service_confirmation">Are you sure you want to delete this service?</string>
-    <string name="cancel">Cancel\n</string>
+    <string name="cancel">Cancel</string>
 </resources>
