--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,5 @@
     <string name="delete">Delete</string>
     <string name="delete_service_confirmation">Are you sure you want to delete this service?</string>
     <string name="cancel">Cancel</string>
+    <string name="scan_qr_code">Scan code</string>
 </resources>
